--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,8 @@
 /********************** COMMON **********************/
+.succed{
+  color:green;
+  font-weight: bold;
+}
 
 .admin{
   display: none;
